--- a/index.html
+++ b/index.html
@@ -7,130 +7,74 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    /* Global Styles */
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background-image: url(background.avif);
-      color: #fff;
-    }
-
-    /* Header Styles */
-    header {
-      background-color: #0d6c41;
-      padding: 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      animation: headerAnimation 2s ease-in-out infinite alternate;
-    }
-
-
-    /* Navigation Styles */
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-    }
-
-    nav li {
-      margin-right: 20px;
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-size: 18px;
-      font-weight: bold;
-      text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    }
-
-    /* Main Content Styles */
-    main {
-      padding: 40px;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
-
-    p {
-      font-size: 24px;
-      margin-bottom: 40px;
-    }
-
-    .placeholder {
-      width: 100%;
-      height: 100%;
-      background-color: #0d6c41;
-      margin-bottom: 40px;
-    }
-
-    button {
-      background-color: #0d6c41;
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
-      font-size: 18px;
-      font-weight: bold;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    /* Footer Styles */
-    footer {
-      background-color: #0d6c41;
-      padding: 20px;
-      text-align: center;
-      animation: footerAnimation 2s ease-in-out infinite alternate;
-    }
-    .image-and-text {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.image-and-text img {
-  margin-right: 20px; /* Adjust as needed */
-}
-
-a{ text-decoration: none; color: white}
-
-  
-  </style>
+  <link href="media.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <header>
-    <a href="index.html"><img src="banner.png" alt="logo" style="width:50%;padding-left:70px"></a>
-    <a href="index.html"><h1 style="margin-right:1200px;padding-bottom: 26px;">Renovagreen</h1></a>
-    <nav>
-      <ul>
-        <li><a href="about.html">About</a></li>
-        <li><a href="home.html">Login</a></li>
-      </ul>
-    </nav>
-  </header>
 
+
+   <nav class="navbar">
+		<div class="navdiv">
+			<a href="index.html"><img src="banner.png" alt="logo" class="renova"></a>
+			<div class="logo"><a href="index.html">RenovaGreen</a> 
+			</div>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="home.html">SignIn</a></li>
+
+			</ul>
+		</div>
+	</nav>
+  </header>
+  <img src="page.png" alt="image" height="1024" class="homepage1" >
   <main>
-    <h1>Renovagreen</h1>
-    <p>Explore our services and learn more about our company.</p>
+ 
     <div class="placeholder">
-      <h1 style="text-align: center; padding-top:15px">Apex Downtown</h1>
-      <div class="image-and-text">
-        <img src="home1.JPG" alt="Apexdowntown" style="width:400px;height:700px; padding: 30px;">
-        <p style="padding-right: 20px;">Apex, North Carolina's downtown area is a charming and vibrant hub that seamlessly blends historic charm with modern amenities. As you stroll through its picturesque streets, you'll find yourself surrounded by a unique blend of quaint shops, cozy cafes, and locally-owned boutiques. One of the defining features of downtown Apex is its historic architecture, with many buildings dating back to the late 19th and early 20th centuries. The well-preserved storefronts and Victorian-style facades add to the area's nostalgic appeal, transporting visitors back in time while still offering all the conveniences of the present day. Downtown Apex is also known for its thriving culinary scene, offering a diverse array of dining options to suit every palate. Whether you're craving authentic Southern barbecue, farm-to-table fare, or international cuisine, you'll find plenty of delicious choices to satisfy your appetite. And with many restaurants featuring outdoor seating, you can enjoy your meal al fresco while soaking in the charming atmosphere.</p>
+ 
+      <div class="inside">
+        <h1 align="center">Downtown Apex, North Carolina</h1>
+  <img src="home1.JPG" alt="Apexdowntown" class="downtown1">
+
+  <h2>1. Historic Architecture</h2>
+
+  <p>
+    The historic architecture of downtown Apex is a sight to behold. Wander down Salem Street, the main thoroughfare, and you'll be transported to another era. Many of the buildings lining the streets date back to the late 19th and early 20th centuries, boasting Victorian-style facades, ornate detailing, and well-preserved storefronts. These architectural gems serve as a testament to the town's storied past and provide a picturesque backdrop for exploration.
+  </p>
+
+  <h2>2. Quaint Shops and Boutiques</h2>
+  <p>
+    As you meander through downtown Apex, you'll discover a treasure trove of charming shops and boutiques. From quaint gift shops and antique stores to eclectic art galleries and specialty boutiques, there's something to pique everyone's interest. Whether you're searching for unique souvenirs, handcrafted goods, or one-of-a-kind finds, you're sure to stumble upon hidden gems around every corner. </p>
+
+  <h2>3. Cozy Cafes and Eateries</h2>
+  <p>
+    The culinary scene in downtown Apex is nothing short of impressive. Locally-owned cafes, bakeries, and eateries beckon with the promise of delicious treats and hearty meals. Start your day with a freshly brewed cup of coffee and a flaky pastry from a cozy cafe, or indulge in a leisurely brunch featuring Southern classics like biscuits and gravy or shrimp and grits. And when it comes to dining options, the choices are endless – from upscale restaurants serving farm-to-table fare to casual diners dishing out comfort food favorites. </p>
+
+  <h2>4. Outdoor Dining</h2>
+  <p>
+    One of the joys of visiting downtown Apex is the opportunity to dine al fresco. Many restaurants offer inviting outdoor seating areas, allowing patrons to savor their meals while basking in the warm sunshine and soaking in the charming ambiance of the historic district. Whether you're enjoying a leisurely lunch with friends or a romantic dinner for two, there's something undeniably magical about dining under the open sky amidst the hustle and bustle of downtown life.
+  </p>
+
+  <h2>5. Community Events and Festivals</h2>
+  <p>
+    Throughout the year, downtown Apex comes alive with a variety of community events and festivals that celebrate the town's culture, heritage, and local talent. From street fairs and art walks to live music performances and holiday celebrations, there's always something happening in the heart of the downtown area. These events provide opportunities for residents and visitors alike to come together, forge connections, and create cherished memories against the backdrop of this charming Southern town.
+  </p>
+
+
+		 
       </div>
     </div>
-    <a href="about.html"><button>Learn More</button></a>
-  </main>
-  
+<div class="placeholder">
 
-  <footer>
+	<h1 align="center">Flawless Town with One Flaw</h1>
+	<h2 align="center">Click learn more to learn more about out intiative</h2>
+	
+    </div>
+</main>
+<div style="text-align: center">  
+	<a href="about.html"><button>Learn More</button></a>
+</div>
+<footer>
     <p>&copy; 2023 Professional Green Homepage. All rights reserved.</p>
   </footer>
 </body>
