--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
                 <input type="password" placeholder="Password">
             </label>
 
-            <button type="submit">Login</button>
+			<button type="submit"><a href="https://docs.google.com/forms/d/e/1FAIpQLSc_xtwrP-WPpupbYSzLW2Gh6ocSoITLSg44RmpAT8WukOS3cw/viewform">Login</a></button>
 
             <div class="social">
                 <div class="go">
